Added html skeleton to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<p>SEAN GORMAN</p>
+<!DOCTYPE html>
+    <html>
+        <head>
+            <title></title>
+            <body>
+            
+            </body>
+        </head>
+    </html>
