Added additional header, main, and footer framework

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
         <head>
             <title></title>
             <body>
-            
+                <header></header>
+                <main>
+                
+                </main>
+                <footer></footer>
             </body>
         </head>
     </html>
