Added article framework, heading 1, and three blank paragraphs

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
             <body>
                 <header></header>
                 <main>
-                
+                    <article>
+                        <h1>Heading 1</h1>
+                        <p></p>
+                        <p></p>
+                        <p></p>
+                    </article>
                 </main>
                 <footer></footer>
             </body>
