Added a lot to html and added pictures

--- a/index.html
+++ b/index.html
@@ -1,18 +1,45 @@
-<!DOCTYPE html>
-    <html>
-        <head>
-            <title></title>
-            <body>
-                <header></header>
-                <main>
-                    <article>
-                        <h1>Heading 1</h1>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                    </article>
-                </main>
-                <footer></footer>
-            </body>
-        </head>
-    </html>
+<!doctype html>
+<html>
+<head>
+  <title>The Dogs of Sean</title>
+<body>
+  <header><h1>My Dogs</h1></header>
+<main>
+<article>
+  <p>I'm only going to be showing you three of my dogs, Jill, Nessie, and Seamus.</p>
+<ol>
+  <section>
+    <li><h2>Jill</h2></li>
+    <figure>
+    <img src="images\Jill.JPG" width="500" height="500"/>
+    <figcaption>Jill attempting to steal cat food</figcaption>
+    </figure>
+    <p>We found Jill with her brother, Jack, in an animal shelter. She lived a happy life and passed away earlier this year. She was a great dog who loved to sniff.
+      She'd sit at the door and just sniff whatever smells come under it all night.
+    </p>
+  </section>
+  <section>
+    <li><h2>Nessie</h2></li>
+    <figure>
+    <img src="images\Ness.JPG" width="500" height="500"/>
+    <figcaption>Nessie and I taking a nap on the floor</figcaption>
+    </figure>
+    <p>Nessie is undoubtedly my dog. She's a border collie, and decided I was the sole member of her herd to follow and protect. I'm not around much anymore,
+      so she tends to just make sure Seamus isn't getting in trouble.
+    </p>
+  </section>
+  <section>
+    <li><h2>Seamus</h2></li>
+    <figure>
+    <img src="images\Seamus.JPG" width="500" height="500"/>
+    <figcaption>Seamus when he was still small</figcaption>
+    </figure>
+    <p>Seamus is a big golden retriever. He's still a puppy, and loves to play, chew, and swim. He's a lot bigger now than he was in the picture.</p>
+  </section>
+</ol>
+</article>
+</main>
+<footer><p>&copy; Sean Gorman 2017</p></footer>
+</body>
+</head>
+</html>
