--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>The Dogs of Sean</title>
+  <link rel="stylesheet" href="styles.css"/>
 <body>
   <header><h1>My Dogs</h1></header>
 <main>
@@ -11,7 +12,7 @@
   <section>
     <li><h2>Jill</h2></li>
     <figure>
-    <img src="images\Jill.JPG" width="500" height="500"/>
+    <img src="images\Jill.JPG"/>
     <figcaption>Jill attempting to steal cat food</figcaption>
     </figure>
     <p>We found Jill with her brother, Jack, in an animal shelter. She lived a happy life and passed away earlier this year. She was a great dog who loved to sniff.
@@ -21,17 +22,16 @@
   <section>
     <li><h2>Nessie</h2></li>
     <figure>
-    <img src="images\Ness.JPG" width="500" height="500"/>
+    <img src="images\Ness.JPG"/>
     <figcaption>Nessie and I taking a nap on the floor</figcaption>
     </figure>
     <p>Nessie is undoubtedly my dog. She's a border collie, and decided I was the sole member of her herd to follow and protect. I'm not around much anymore,
       so she tends to just make sure Seamus isn't getting in trouble.
-    </p>
   </section>
   <section>
     <li><h2>Seamus</h2></li>
     <figure>
-    <img src="images\Seamus.JPG" width="500" height="500"/>
+    <img src="images\Seamus.JPG"/>
     <figcaption>Seamus when he was still small</figcaption>
     </figure>
     <p>Seamus is a big golden retriever. He's still a puppy, and loves to play, chew, and swim. He's a lot bigger now than he was in the picture.</p>
