yyyyyyyy enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -1,45 +1,61 @@
 <!doctype html>
 <html>
 <head>
-  <title>The Dogs of Sean</title>
+  <title>Very Basic Properties of an Orbit</title>
   <link rel="stylesheet" href="styles.css"/>
 <body>
-  <header><h1>My Dogs</h1></header>
+  <header id="header"><h1>A few orbital properties</h1></header>
 <main>
 <article>
-  <p>I'm only going to be showing you three of my dogs, Jill, Nessie, and Seamus.</p>
+  <p>In this article I'm going to be talking about three important orbital properties that can tell you almost everything about an orbit!</p>
 <ol>
   <section>
-    <li><h2>Jill</h2></li>
+    <h2><li>The two apsides, apoapsis and periapsis</li></h2>
     <figure>
-    <img src="images\Jill.JPG"/>
-    <figcaption>Jill attempting to steal cat food</figcaption>
+    <img src="images/apsides.png"/>
+    <figcaption></figcaption>
     </figure>
-    <p>We found Jill with her brother, Jack, in an animal shelter. She lived a happy life and passed away earlier this year. She was a great dog who loved to sniff.
-      She'd sit at the door and just sniff whatever smells come under it all night.
+    <p>
+      The apsides are the two farthest points of any orbit. The apoapsis is the highest point, leaving the periapsis to be the lowest. In a perfect circular
+      orbit, both apsides will be the same. Pretty simple, right?
     </p>
   </section>
   <section>
-    <li><h2>Nessie</h2></li>
+    <h2><li>Eccentricity</li></h2>
     <figure>
-    <img src="images\Ness.JPG"/>
-    <figcaption>Nessie and I taking a nap on the floor</figcaption>
+    <img class="imgp" src="images/eccentricity.png"/>
+    <figcaption></figcaption>
     </figure>
-    <p>Nessie is undoubtedly my dog. She's a border collie, and decided I was the sole member of her herd to follow and protect. I'm not around much anymore,
-      so she tends to just make sure Seamus isn't getting in trouble.
+    <p>
+      Eccentricity is a property that describes how much an object in orbit deviates from a perfect, circular orbit.
+    </p>
+    <ul>
+      <li>A circular orbit has an eccentricity of 0.</li>
+      <li>A non-circular elliptical orbit has an eccentricity between 0 and 1.</li>
+      <p>While we're specifically talking about orbits and not trajectories, eccentricity can be applied to more than ellipses.</p>
+      <li>A parabolic trajectory has an eccentricity of 1.</li>
+      <li>A hyperbolic trajectory has an eccentricity greater than 1.</li>
+    </ul>
   </section>
   <section>
-    <li><h2>Seamus</h2></li>
+    <h2><li>Inclination</li></h2>
     <figure>
-    <img src="images\Seamus.JPG"/>
-    <figcaption>Seamus when he was still small</figcaption>
+    <img src="images/inclination.jpg"/>
+    <figcaption></figcaption>
     </figure>
-    <p>Seamus is a big golden retriever. He's still a puppy, and loves to play, chew, and swim. He's a lot bigger now than he was in the picture.</p>
+    <p>
+      Inclination is, simply put, the tilt of an orbit. It's usually given in degrees and if it's a satellite orbiting a planet, the reference tilt is
+      usually the planet's equator. Inclinations are given in degrees. The inclination can also tell you the rotation of the object in the orbit.
+      Inclinations between 0° and 90° are in a prograde orbit (they go around the orbit the same direction the planet rotates), while an inclination
+      between 90° and 180° are in a retrograde orbit (the opposite of a prograde orbit). An inclination of 0° means the satellite is in a prograde
+      orbit going the same way as the planets rotation. An inclination of 90° is a polar orbit (imagine an orbit that is in line with the top and bottom
+      of the planet). An inclination of 180° is an equitorial retrograde orbit.
+    </p>
   </section>
 </ol>
 </article>
 </main>
-<footer><p>&copy; Sean Gorman 2017</p></footer>
+<footer><p>&copy; Sean Gorman 2018</p></footer>
 </body>
 </head>
 </html>
