Changed a TON of style and html!

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <title>Very Basic Properties of an Orbit</title>
   <link rel="stylesheet" href="styles.css"/>
 <body>
-  <header id="header"><h1>A few orbital properties</h1></header>
+  <header><h1>A few orbital properties</h1></header>
 <main>
 <article>
-  <p>In this article I'm going to be talking about three important orbital properties that can tell you almost everything about an orbit!</p>
+  <p>Today we're going to be talking about three important orbital properties that can tell you almost everything about an orbit!</p>
 <ol>
   <section>
     <h2><li>The two apsides, apoapsis and periapsis</li></h2>
-    <figure>
-    <img src="images/apsides.png"/>
+    <figure class="fig">
+      <img src="images/apsides.png"/>
     <figcaption></figcaption>
     </figure>
     <p>
@@ -22,8 +22,8 @@
   </section>
   <section>
     <h2><li>Eccentricity</li></h2>
-    <figure>
-    <img class="imgp" src="images/eccentricity.png"/>
+    <figure class="fig">
+      <img id='eccentricity' src="images/eccentricity.png"/>
     <figcaption></figcaption>
     </figure>
     <p>
@@ -32,24 +32,27 @@
     <ul>
       <li>A circular orbit has an eccentricity of 0.</li>
       <li>A non-circular elliptical orbit has an eccentricity between 0 and 1.</li>
-      <p>While we're specifically talking about orbits and not trajectories, eccentricity can be applied to more than ellipses.</p>
+    </ul>
+    <p>While we're specifically talking about orbits and not trajectories, eccentricity can be applied to more than ellipses.</p>
+    <ul>
       <li>A parabolic trajectory has an eccentricity of 1.</li>
       <li>A hyperbolic trajectory has an eccentricity greater than 1.</li>
     </ul>
   </section>
   <section>
     <h2><li>Inclination</li></h2>
-    <figure>
-    <img src="images/inclination.jpg"/>
+    <figure class="fig">
+      <img src="images/inclination.jpg"/>
     <figcaption></figcaption>
     </figure>
     <p>
-      Inclination is, simply put, the tilt of an orbit. It's usually given in degrees and if it's a satellite orbiting a planet, the reference tilt is
-      usually the planet's equator. Inclinations are given in degrees. The inclination can also tell you the rotation of the object in the orbit.
-      Inclinations between 0° and 90° are in a prograde orbit (they go around the orbit the same direction the planet rotates), while an inclination
-      between 90° and 180° are in a retrograde orbit (the opposite of a prograde orbit). An inclination of 0° means the satellite is in a prograde
-      orbit going the same way as the planets rotation. An inclination of 90° is a polar orbit (imagine an orbit that is in line with the top and bottom
-      of the planet). An inclination of 180° is an equitorial retrograde orbit.
+      Inclination is, simply put, the tilt of an orbit. It's usually given in degrees, and if it's a satellite orbiting a planet, the reference tilt is
+      usually the planet's equator. The inclination can also tell you the rotation of the object in the orbit.
+      <br></br>
+      Inclinations between 0 degrees and 90 degrees are in a prograde orbit (they go around the orbit the same direction the planet rotates), while an inclination
+      between 90 degrees and 180 degrees are in a retrograde orbit (the opposite of a prograde orbit). An inclination of 0 degrees means the satellite is in a prograde
+      orbit going the same way as the planets rotation. An inclination of 90 degrees is a polar orbit (imagine an orbit that is in line with the top and bottom
+      of the planet). An inclination of 180 degrees is an equitorial retrograde orbit.
     </p>
   </section>
 </ol>
